--- a/imgur/imgur/imgur.csproj
+++ b/imgur/imgur/imgur.csproj
@@ -96,42 +96,44 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API.cs" />
+    <Compile Include="ImgurAPI\API.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CommentControl.xaml.cs">
+    <Compile Include="Controls\CommentControl.xaml.cs">
       <DependentUpon>CommentControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\TabHeaderFill.xaml.cs">
       <DependentUpon>TabHeaderFill.xaml</DependentUpon>
     </Compile>
     <Compile Include="Extensions.cs" />
-    <Compile Include="ImageImgurXAML.xaml.cs">
+    <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="View\ImageImgurXAML.xaml.cs">
       <DependentUpon>ImageImgurXAML.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ImgurAPI\ImgurAccount.cs" />
-    <Compile Include="ImgurAPI\ImgurAtomicImageData.cs" />
-    <Compile Include="ImgurAPI\ImgurClient.cs" />
-    <Compile Include="ImgurAPI\ImgurImage.cs" />
-    <Compile Include="ImgurAPI\ImgurImageData.cs" />
-    <Compile Include="MainList.xaml.cs">
+    <Compile Include="Models\ImgurAccount.cs" />
+    <Compile Include="Models\ImgurAtomicImageData.cs" />
+    <Compile Include="Models\ImgurClient.cs" />
+    <Compile Include="Models\ImgurImage.cs" />
+    <Compile Include="Models\ImgurImageData.cs" />
+    <Compile Include="View\MainList.xaml.cs">
       <DependentUpon>MainList.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MyGridView.cs" />
-    <Compile Include="PostDetail.xaml.cs">
+    <Compile Include="Controls\MyGridView.cs" />
+    <Compile Include="View\PostDetail.xaml.cs">
       <DependentUpon>PostDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Purity\NsfwContent.xaml.cs">
       <DependentUpon>NsfwContent.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserProfile.xaml.cs">
+    <Compile Include="View\UserProfile.xaml.cs">
       <DependentUpon>UserProfile.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -217,7 +219,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="CommentControl.xaml">
+    <Page Include="Controls\CommentControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -225,19 +227,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="ImageImgurXAML.xaml">
+    <Page Include="View\ImageImgurXAML.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainList.xaml">
+    <Page Include="View\MainList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainPage.xaml">
+    <Page Include="View\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="PostDetail.xaml">
+    <Page Include="View\PostDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -245,7 +247,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserProfile.xaml">
+    <Page Include="View\UserProfile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -254,6 +256,9 @@
     <SDKReference Include="WindowsMobile, Version=10.0.10586.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
