--- a/imgur/imgur/project.json
+++ b/imgur/imgur/project.json
@@ -7,7 +7,8 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "MvvmLight": "5.3.0",
     "Newtonsoft.Json": "9.0.1",
-    "System.Collections.NonGeneric": "4.3.0"
+    "System.Collections.NonGeneric": "4.3.0",
+    "Template10": "1.1.12"
   },
   "frameworks": {
     "uap10.0": {}
