--- a/imgur/imgur/project.json
+++ b/imgur/imgur/project.json
@@ -5,6 +5,9 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.Net.Http": "2.2.29",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Microsoft.Toolkit.Uwp": "1.2.0",
+    "Microsoft.Toolkit.Uwp.UI": "1.2.0",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
     "MvvmLight": "5.3.0",
     "Newtonsoft.Json": "9.0.1",
     "System.Collections.NonGeneric": "4.3.0",
